tests/transpiler/x/scala/sort_stable.scala
// Generated by Mochi v0.10.33 on 2025-07-21 16:43:11 GMT+7
import scala.collection.mutable.{ArrayBuffer, Map}
object Main {
  def main(args: Array[String]): Unit = {
    case class Item(n: Int, v: String)
    val items: ArrayBuffer[Item] = ArrayBuffer(Item(1, "a"), Item(1, "b"), Item(2, "c"))
    val result: ArrayBuffer[Any] = ({ var _tmp = ArrayBuffer[(Any,Any)]() ; for (i <- items) { _tmp.append((i.n, i.v)) }; var _res = _tmp.sortBy(_._1).map(_._2); _res })
    println(result)
  }
}
